--- a/src/utilities.css
+++ b/src/utilities.css
@@ -81,18 +81,21 @@
 .icon svg {
   height: 24px;
   width: 24px;
+  vertical-align: middle;
 }
 
 .icon i {
   height: 24px;
   width: 24px;
+  vertical-align: middle;
 }
 
 button:not(.icon) svg,
 button:not(.icon) i {
-  height: 16px;
-  width: 16px;
+  height: 20px;
+  width: 20px;
   margin-right: 8px;
+  vertical-align: middle;
 }
 
 button:not(.icon).large svg,
@@ -100,6 +103,7 @@ button:not(.icon).large i {
   height: 24px;
   width: 24px;
   margin-right: 8px;
+  vertical-align: middle;
 }
 
 .mb-2 {
